# Visual-Novel

./: .gitmodules  CMakeLists.txt  LICENSE.md  cpp.hint
Asset/: CMakeLists.txt
Asset/AssetPackRStream/: AssetPackRStream.cc
Asset/AssetPackRstream/: AssetPackRStream.cc  AssetPackRStream.h
Asset/AssetPackWStream/: AssetPackWStream.cc  AssetPackWStream.h
Asset/ExtraArea/: ExtraArea.h
Asset/ThemeAssetList/: ThemeAssetList.h
Asset/ThemePack/: ThemePack.cc  ThemePack.h
Asset/ThemePackCreator/: ThemePackCreator.cc  ThemePackCreator.h
Core/: CMakeLists.txt
Core/CommandList/: CommandList.h
Core/CoordinateSystem/: RatioCoordinateSystem.h
Core/Exception/: Exception.cc  Exception.h
Core/GuiContext/: GuiContext.h
Core/LogSystem/: LogFunction.cc  LogFunction.h
Core/Monitor/: Monitor.cc  Monitor.h
Core/SpscQueue/: SpscQueue.h
Core/TSVector/: TSVector.h
Core/Transform/: Transform.cc  Transform.h
Core/Window/: Window.cc  Window.h
Entry/: Application.cc  Application.h  CMakeLists.txt  Initialization.h
Entry/EntryMenu/: EntryMenu.h
Render/: CMakeLists.txt
Render/BasicRender/: BasicRender.h
Render/BasicTexture/: BasicTexture.h
Render/FileWeiget/: ChooseFile.h  ChooseFolder.h  ChooseVnap.h
Render/FontCore/: FontCore.cc  FontCore.h
Render/LogWindow/: LogWindow.h
Render/MainMenu/: MainMenu.cc  MainMenu.h
Resolution/: CMakeLists.txt  EntryPoint.cc  EntryPoint.h
Resolution/CommandFactory/: CommandFactory.h
Resolution/DefinedPart/: DefinePart.cc  DefinePart.h
Resolution/FormatChecker/: FormatChecker.h
Resolution/NormalLineResolution/: NormalLineResolution.cc  NormalLineResolution.h
